src/test/deca/context/invalid/test_polymorphisme.deca
// Description:
//    Programme testant que l'on ne puisse pas utiliser une methode d'une classe fille depuis la classe mere 
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 31 : La méthode getS n'est pas défini dans la classe A 
//
// Historique:
//    cree le 21/01/2021

class A  {
	int x = 5 ;
	int getX(){
		return x;
	}
}

class B extends A {
	string s = "gl27_test";
	string getS(){
		return s;
	}	
}

{
	
	A a = new B();
	println(a.getX(),a.getS());
	
}
